# media-kit

./: build.gradle  gradle.properties
FFmpegAndroid/: build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lq/mediakit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/mediakit/: config.h  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  ffmpeg_run_impl.c  ffmpeg_run_impl.h
app/src/main/java/com/lq/mediakit/: MainActivity.java  MediaHelper.java  VideoCropActivity.java  VideoTrimActivity.java
app/src/main/java/com/lq/mediakit/jni/: FFmpegVideoProcessor.java  MediaHelper.java
app/src/main/java/com/lq/mediakit/media/: FFmpegWrapper.java  FrameExtractor10.java  VideoTrimAdapter.java
app/src/main/java/com/lq/mediakit/utils/: Utils.java  VideoUtils.java
app/src/main/java/com/lq/mediakit/widget/: VideoSliceSeekBar.java
app/src/main/res/layout/: activity_main.xml  activity_video_crop.xml  activity_video_trim.xml  layout_video_thumb.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/lq/mediakit/: ExampleUnitTest.java
build-conf/: _ffmpegbuild.sh  _x264build.sh  build_android_arm.sh  ffmpeg_module.sh
gradle/wrapper/: gradle-wrapper.properties
